<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tesis.arduinoconnection.MainActivity"
    android:background="#062e2e">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:foregroundGravity="center"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="6"
            android:foregroundGravity="center"
            android:layout_height="0dp">
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_weight="4"
                android:layout_height="0dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:text="@string/lab"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:text="@string/university"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp"
            android:weightSum="7"
            android:layout_gravity="center"
            android:gravity="center"
            android:foregroundGravity="center"
            android:paddingHorizontal="40px"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center">
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:text="@string/register"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="40px"
                android:foregroundGravity="center">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:text="@string/chek_in"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="bottom|right"
                android:gravity="bottom|right"
                android:foregroundGravity="bottom|right"
                android:layout_weight="1"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
