<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tesis.arduinoconnection.MarkActivity"
    android:background="#062e2e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#E8A10C"
            android:weightSum="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:foregroundGravity="left|center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/button_back"
                    android:paddingLeft="10dp"
                    android:layout_gravity="start|center_vertical"
                    android:foregroundGravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="#fff" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center_vertical">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:foregroundGravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10px"
                    android:text="@string/title_marks"
                    android:textColor="#fff"
                    android:textSize="80px" />
                <ImageView
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter_1_black_24dp"
                    android:tint="#fff" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="2"
            android:foregroundGravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button_in_mark"
                        android:layout_width="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"
                        android:text="@string/mark_in"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button_out_mark"
                        android:layout_gravity="bottom|left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonshape"
                        android:text="@string/mark_out"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button_out_collation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:background="@drawable/buttonshape"
                        android:text="@string/mark_out_collation"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/button_in_collation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:background="@drawable/buttonshape"
                        android:text="@string/mark_in_collation"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
