<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarkStepTwo"
    android:background="#062e2e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#E8A10C"
            android:weightSum="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:foregroundGravity="left|center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/button_back"
                    android:paddingLeft="10dp"
                    android:layout_gravity="start|center_vertical"
                    android:foregroundGravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="#fff" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center_vertical">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:foregroundGravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10px"
                    android:text="@string/title_marks"
                    android:textColor="#fff"
                    android:textSize="80px" />

                <ImageView
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter_2_black_24dp"
                    android:tint="#fff" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:foregroundGravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:foregroundGravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_fingerprint"
                android:textColor="#fff"
                android:textSize="90px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="50px"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/next_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@drawable/fingerprint"
                android:tint="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:foregroundGravity="center"
            android:layout_height="0dp">
            <Button
                android:id="@+id/finish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:text="@string/send"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
